fixed an alignement problem

--- a/scss/_section-products.scss
+++ b/scss/_section-products.scss
@@ -10,6 +10,9 @@
     gap: 2.5rem;
   }
   &__article {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     background: #fff;
     padding: 1.2rem 1.2rem;
     margin: 0 auto;
@@ -27,7 +30,7 @@
   &__name-n-price {
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
+    align-items:flex-end;
     margin-bottom: 1.2rem;
   }
   &__name {
